[package]
name = "slicer-render"
version = "0.9.0"
edition = "2021"
default-run = "slicer-render"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "slicer-render"
path = "src/main.rs"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
itertools = "0.10.3"
nom-gcode = "0.1.1"
cgmath = { version = "0.18", features = ["serde"] }

# three-d = "0.10.0"
# three-d = { git = "https://github.com/asny/three-d.git" }
# three-d = { path = "../../../three-d" }
three-d = { git = "https://github.com/D1plo1d/three-d.git", branch = "feature/show_instances" }

serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
env_logger = "0.9.0"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.55", features = ["Window", "Document", "HtmlCollection", "NodeList", "File", "HtmlInputElement"] }
nom_stl = "0.2.2"
stl_io = { git = "https://github.com/hmeyer/stl_io.git" }
arc-swap = "1.5.0"
js-sys = "0.3.56"
